--- a/main.ipynb
+++ b/main.ipynb
@@ -2,30 +2,336 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CSV Data Ingestion\n",
     "\n",
     "import pandas as pd\n",
-    "import glob"
+    "import glob\n",
+    "import shutil\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(override=True)\n",
+    "import pyodbc \n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concat all CSVs in data file to one df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_data = pd.read_csv(\"Data/)"
+    "path = 'Data'\n",
+    "csv_files = glob.glob(path+\"/*.csv\")\n",
+    "df_raw_data = pd.concat(map(pd.read_csv, csv_files))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Move files to archive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source_dir = 'Data'\n",
+    "target_dir = 'Data/Old'\n",
+    "    \n",
+    "file_names = os.listdir(source_dir)\n",
+    "    \n",
+    "for file_name in file_names:\n",
+    "    shutil.move(os.path.join(source_dir, file_name), target_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clean column names for whitespace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw_data.columns = [c.replace(' ', '') for c in df_raw_data.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BSBNumber</th>\n",
+       "      <th>AccountNumber</th>\n",
+       "      <th>TransactionDate</th>\n",
+       "      <th>Narration</th>\n",
+       "      <th>Cheque</th>\n",
+       "      <th>Debit</th>\n",
+       "      <th>Credit</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>TransactionType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td></td>\n",
+       "      <td>5229 8008 3667 1385</td>\n",
+       "      <td>25/07/2023</td>\n",
+       "      <td>AUTHORISATION ONLY - Enviro Friendly CarwasM  ...</td>\n",
+       "      <td></td>\n",
+       "      <td>10.3</td>\n",
+       "      <td></td>\n",
+       "      <td>-777.89</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td>5229 8008 3667 1385</td>\n",
+       "      <td>25/07/2023</td>\n",
+       "      <td>AUTHORISATION ONLY - BLCK  BRWN            M  ...</td>\n",
+       "      <td></td>\n",
+       "      <td>45.0</td>\n",
+       "      <td></td>\n",
+       "      <td>-767.59</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td></td>\n",
+       "      <td>5229 8008 3667 1385</td>\n",
+       "      <td>25/07/2023</td>\n",
+       "      <td>AUTHORISATION ONLY - AMAZON AU RETAIL      S  ...</td>\n",
+       "      <td></td>\n",
+       "      <td>6.25</td>\n",
+       "      <td></td>\n",
+       "      <td>-722.59</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td></td>\n",
+       "      <td>5229 8008 3667 1385</td>\n",
+       "      <td>25/07/2023</td>\n",
+       "      <td>AUTHORISATION ONLY - WOOLWORTHS      3149  R  ...</td>\n",
+       "      <td></td>\n",
+       "      <td>7.0</td>\n",
+       "      <td></td>\n",
+       "      <td>-716.34</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td></td>\n",
+       "      <td>5229 8008 3667 1385</td>\n",
+       "      <td>25/07/2023</td>\n",
+       "      <td>AUTHORISATION ONLY - APPLE.COM/BILL        S  ...</td>\n",
+       "      <td></td>\n",
+       "      <td>14.99</td>\n",
+       "      <td></td>\n",
+       "      <td>-709.34</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td></td>\n",
+       "      <td>5229 8008 3667 1385</td>\n",
+       "      <td>27/04/2023</td>\n",
+       "      <td>WOOLWORTHS      3149     RINGWOOD     AU</td>\n",
+       "      <td></td>\n",
+       "      <td>16.0</td>\n",
+       "      <td></td>\n",
+       "      <td>-873.19</td>\n",
+       "      <td>WDL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td></td>\n",
+       "      <td>5229 8008 3667 1385</td>\n",
+       "      <td>26/04/2023</td>\n",
+       "      <td>WOOLWORTHS      3149     RINGWOOD     AU</td>\n",
+       "      <td></td>\n",
+       "      <td>49.65</td>\n",
+       "      <td></td>\n",
+       "      <td>-857.19</td>\n",
+       "      <td>WDL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td></td>\n",
+       "      <td>5229 8008 3667 1385</td>\n",
+       "      <td>26/04/2023</td>\n",
+       "      <td>TREK BICYCLE CORPORATI   RINGWOOD     AU</td>\n",
+       "      <td></td>\n",
+       "      <td>29.95</td>\n",
+       "      <td></td>\n",
+       "      <td>-807.54</td>\n",
+       "      <td>WDL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226</th>\n",
+       "      <td></td>\n",
+       "      <td>5229 8008 3667 1385</td>\n",
+       "      <td>26/04/2023</td>\n",
+       "      <td>DUSK AUSTRALASIA PTY     RINGWOOD</td>\n",
+       "      <td></td>\n",
+       "      <td>29.99</td>\n",
+       "      <td></td>\n",
+       "      <td>-777.59</td>\n",
+       "      <td>WDL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227</th>\n",
+       "      <td></td>\n",
+       "      <td>5229 8008 3667 1385</td>\n",
+       "      <td>26/04/2023</td>\n",
+       "      <td>BUNNINGS 747000          RINGWOOD</td>\n",
+       "      <td></td>\n",
+       "      <td>27.4</td>\n",
+       "      <td></td>\n",
+       "      <td>-747.60</td>\n",
+       "      <td>WDL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>228 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    BSBNumber        AccountNumber TransactionDate  \\\n",
+       "0              5229 8008 3667 1385      25/07/2023   \n",
+       "1              5229 8008 3667 1385      25/07/2023   \n",
+       "2              5229 8008 3667 1385      25/07/2023   \n",
+       "3              5229 8008 3667 1385      25/07/2023   \n",
+       "4              5229 8008 3667 1385      25/07/2023   \n",
+       "..        ...                  ...             ...   \n",
+       "223            5229 8008 3667 1385      27/04/2023   \n",
+       "224            5229 8008 3667 1385      26/04/2023   \n",
+       "225            5229 8008 3667 1385      26/04/2023   \n",
+       "226            5229 8008 3667 1385      26/04/2023   \n",
+       "227            5229 8008 3667 1385      26/04/2023   \n",
+       "\n",
+       "                                             Narration Cheque  Debit Credit  \\\n",
+       "0    AUTHORISATION ONLY - Enviro Friendly CarwasM  ...          10.3          \n",
+       "1    AUTHORISATION ONLY - BLCK  BRWN            M  ...          45.0          \n",
+       "2    AUTHORISATION ONLY - AMAZON AU RETAIL      S  ...          6.25          \n",
+       "3    AUTHORISATION ONLY - WOOLWORTHS      3149  R  ...           7.0          \n",
+       "4    AUTHORISATION ONLY - APPLE.COM/BILL        S  ...         14.99          \n",
+       "..                                                 ...    ...    ...    ...   \n",
+       "223           WOOLWORTHS      3149     RINGWOOD     AU          16.0          \n",
+       "224           WOOLWORTHS      3149     RINGWOOD     AU         49.65          \n",
+       "225           TREK BICYCLE CORPORATI   RINGWOOD     AU         29.95          \n",
+       "226                  DUSK AUSTRALASIA PTY     RINGWOOD         29.99          \n",
+       "227                  BUNNINGS 747000          RINGWOOD          27.4          \n",
+       "\n",
+       "     Balance TransactionType  \n",
+       "0    -777.89                  \n",
+       "1    -767.59                  \n",
+       "2    -722.59                  \n",
+       "3    -716.34                  \n",
+       "4    -709.34                  \n",
+       "..       ...             ...  \n",
+       "223  -873.19             WDL  \n",
+       "224  -857.19             WDL  \n",
+       "225  -807.54             WDL  \n",
+       "226  -777.59             WDL  \n",
+       "227  -747.60             WDL  \n",
+       "\n",
+       "[228 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_raw_data_clean = df_raw_data.replace(np.nan, '', regex=True)\n",
+    "df_raw_data_clean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Move files to DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "server = os.getenv('SQL_SERVER')\n",
+    "database = os.getenv('SQL_DATABASE')\n",
+    "cnxn_str = 'DRIVER={SQL Server};server='+server+';Database='+database+';Trusted_Connection=yes;'\n",
+    "cnxn = pyodbc.connect(cnxn_str)\n",
+    "cursor = cnxn.cursor()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in df_raw_data_clean.iterrows():\n",
+    "    cursor.execute(\"Insert into raw_txns (BSBNumber,AccountNumber,TransactionDate,Narration,Cheque,Debit,Credit,Balance,TransactionType) Values (?,?,?,?,?,?,?,?,?)\", row.BSBNumber,row.AccountNumber,row.TransactionDate,row.Narration,row.Cheque,row.Debit,row.Credit,row.Balance,row.TransactionType)\n",
+    "cnxn.commit()"
    ]
   }
  ],
