exec std to raw proc

--- a/main.ipynb
+++ b/main.ipynb
@@ -75,6 +75,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Replace Nulls"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -298,8 +305,7 @@
     }
    ],
    "source": [
-    "df_raw_data_clean = df_raw_data.replace(np.nan, '', regex=True)\n",
-    "df_raw_data_clean"
+    "df_raw_data_clean = df_raw_data.replace(np.nan, '', regex=True)"
    ]
   },
   {
@@ -332,6 +338,16 @@
     "for index, row in df_raw_data_clean.iterrows():\n",
     "    cursor.execute(\"Insert into raw_txns (BSBNumber,AccountNumber,TransactionDate,Narration,Cheque,Debit,Credit,Balance,TransactionType) Values (?,?,?,?,?,?,?,?,?)\", row.BSBNumber,row.AccountNumber,row.TransactionDate,row.Narration,row.Cheque,row.Debit,row.Credit,row.Balance,row.TransactionType)\n",
     "cnxn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute(\"EXEC etl.RawToStd\")\n",
+    "cnxn.commit()\n"
    ]
   }
  ],
