--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,9 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(override=True)\n",
-    "import pyodbc \n",
+    "import psycopg2 \n",
+    "from psycopg2 import Error\n",
+    "import psycopg2.extras as extras\n",
     "import numpy as np"
    ]
   },
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +103,119 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Move files to DB"
+    "## Move files to DB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Connect to DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PostgreSQL server information\n",
+      "{'user': 'Angelo16', 'channel_binding': 'prefer', 'dbname': 'neondb', 'host': 'ep-bitter-shadow-80961097.ap-southeast-1.aws.neon.tech', 'port': '5432', 'options': '', 'sslmode': 'prefer', 'sslcompression': '0', 'sslsni': '1', 'ssl_min_protocol_version': 'TLSv1.2', 'gssencmode': 'disable', 'krbsrvname': 'postgres', 'target_session_attrs': 'any'} \n",
+      "\n",
+      "You are connected to -  ('PostgreSQL 15.3 on x86_64-pc-linux-gnu, compiled by gcc (Debian 10.2.1-6) 10.2.1 20210110, 64-bit',) \n",
+      "\n",
+      "PostgreSQL connection is closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    # Connect to an existing database\n",
+    "    connection = psycopg2.connect(user=os.getenv('POSTGRES_USER'),\n",
+    "                                  password=os.getenv('POSTGRES_PASSWORD'),\n",
+    "                                  host=os.getenv('POSTGRES_HOST'),\n",
+    "                                  port=os.getenv('POSTGRES_PORT'),\n",
+    "                                  database=os.getenv('POSTGRES_DATABASE'))\n",
+    "\n",
+    "    # Create a cursor to perform database operations\n",
+    "    cursor = connection.cursor()\n",
+    "    # Print PostgreSQL details\n",
+    "    print(\"PostgreSQL server information\")\n",
+    "    print(connection.get_dsn_parameters(), \"\\n\")\n",
+    "    # Executing a SQL query\n",
+    "    cursor.execute(\"SELECT version();\")\n",
+    "    # Fetch result\n",
+    "    record = cursor.fetchone()\n",
+    "    print(\"You are connected to - \", record, \"\\n\")\n",
+    "\n",
+    "except (Exception, Error) as error:\n",
+    "    print(\"Error while connecting to PostgreSQL\", error)\n",
+    "finally:\n",
+    "    if (connection):\n",
+    "        cursor.close()\n",
+    "        connection.close()\n",
+    "        print(\"PostgreSQL connection is closed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_values(conn, df, table):\n",
+    "  \n",
+    "    tuples = [tuple(x) for x in df.to_numpy()]\n",
+    "  \n",
+    "    cols = ','.join(list(df.columns))\n",
+    "    # SQL query to execute\n",
+    "    query = \"INSERT INTO %s(%s) VALUES %%s\" % (table, cols)\n",
+    "    cursor = conn.cursor()\n",
+    "    try:\n",
+    "        extras.execute_values(cursor, query, tuples)\n",
+    "        conn.commit()\n",
+    "    except (Exception, psycopg2.DatabaseError) as error:\n",
+    "        print(\"Error: %s\" % error)\n",
+    "        conn.rollback()\n",
+    "        cursor.close()\n",
+    "        return 1\n",
+    "    print(\"the dataframe is inserted\")\n",
+    "    cursor.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataframe is inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "connection = psycopg2.connect(user=os.getenv('POSTGRES_USER'),\n",
+    "                                  password=os.getenv('POSTGRES_PASSWORD'),\n",
+    "                                  host=os.getenv('POSTGRES_HOST'),\n",
+    "                                  port=os.getenv('POSTGRES_PORT'),\n",
+    "                                  database=os.getenv('POSTGRES_DATABASE'))\n",
+    "\n",
+    "execute_values(connection,df_raw_data_clean,'raw_txns')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection.commit()"
    ]
   },
   {
@@ -111,11 +225,11 @@
    "outputs": [],
    "source": [
     "\n",
-    "server = os.getenv('SQL_SERVER')\n",
-    "database = os.getenv('SQL_DATABASE')\n",
-    "cnxn_str = 'DRIVER={SQL Server};server='+server+';Database='+database+';Trusted_Connection=yes;'\n",
-    "cnxn = pyodbc.connect(cnxn_str)\n",
-    "cursor = cnxn.cursor()\n"
+    "# server = os.getenv('SQL_SERVER')\n",
+    "# database = os.getenv('SQL_DATABASE')\n",
+    "# cnxn_str = 'DRIVER={SQL Server};server='+server+';Database='+database+';Trusted_Connection=yes;'\n",
+    "# cnxn = pyodbc.connect(cnxn_str)\n",
+    "# cursor = cnxn.cursor()\n"
    ]
   },
   {
@@ -124,9 +238,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index, row in df_raw_data_clean.iterrows():\n",
-    "    cursor.execute(\"Insert into raw_txns (BSBNumber,AccountNumber,TransactionDate,Narration,Cheque,Debit,Credit,Balance,TransactionType,SourceFile) Values (?,?,?,?,?,?,?,?,?,?)\", row.BSBNumber,row.AccountNumber,row.TransactionDate,row.Narration,row.Cheque,row.Debit,row.Credit,row.Balance,row.TransactionType,row.SourceFile)\n",
-    "cnxn.commit()"
+    "# for index, row in df_raw_data_clean.iterrows():\n",
+    "#     cursor.execute(\"Insert into raw_txns (BSBNumber,AccountNumber,TransactionDate,Narration,Cheque,Debit,Credit,Balance,TransactionType,SourceFile) Values (?,?,?,?,?,?,?,?,?,?)\", row.BSBNumber,row.AccountNumber,row.TransactionDate,row.Narration,row.Cheque,row.Debit,row.Credit,row.Balance,row.TransactionType,row.SourceFile)\n",
+    "# cnxn.commit()"
    ]
   },
   {
@@ -135,8 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execut   e(\"EXEC etl.RawToStd\")\n",
-    "cnxn.commit()"
+    "# cursor.execut   e(\"EXEC etl.RawToStd\")\n",
+    "# cnxn.commit()"
    ]
   }
  ],
