--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +69,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Update file name to remove PII"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the datge of the file \n",
+    "df_raw_data['SourceFileDate'] = df_raw_data['SourceFile'].str[32:]\n",
+    "\n",
+    "# Match the card number to the BW card (from .env)\n",
+    "BW = os.getenv('BANKWEST_LAST4')\n",
+    "df_raw_data['SourceFile'] = df_raw_data['SourceFile'].str[15:19].apply(lambda x: 'BANKWEST' if x == BW else 'UNKNOWN')\n",
+    "\n",
+    "# Concat date and card tag\n",
+    "df_raw_data['SourceFile'] = df_raw_data['SourceFile'].astype(str)+'_'+df_raw_data['SourceFileDate'].astype(str)\n",
+    "\n",
+    "# Remove sourcefile column\n",
+    "df_raw_data.drop('SourceFileDate', axis = 1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hash PII"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw_data['Account Number'] = df_raw_data['Account Number'].apply(hash)\n",
+    "df_raw_data['BSB Number'] = df_raw_data['BSB Number'].apply(hash)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Clean column names for whitespace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
