--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -9,7 +9,7 @@
     "# CSV Data Ingestion\n",
     "\n",
     "import pandas as pd\n",
-    "import glob\n",
+    "import glob2\n",
     "import shutil\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
