inserting into local postgres

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,34 +49,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Move files to archive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "source_dir = 'Data'\n",
-    "target_dir = 'Data/Old'\n",
-    "    \n",
-    "file_names = os.listdir(source_dir)\n",
-    "    \n",
-    "for file_name in file_names:\n",
-    "    shutil.move(os.path.join(source_dir, file_name), target_dir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Clean column names for whitespace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -123,9 +101,9 @@
      "output_type": "stream",
      "text": [
       "PostgreSQL server information\n",
-      "{'user': 'Angelo16', 'channel_binding': 'prefer', 'dbname': 'neondb', 'host': 'ep-bitter-shadow-80961097.ap-southeast-1.aws.neon.tech', 'port': '5432', 'options': '', 'sslmode': 'prefer', 'sslcompression': '0', 'sslsni': '1', 'ssl_min_protocol_version': 'TLSv1.2', 'gssencmode': 'disable', 'krbsrvname': 'postgres', 'target_session_attrs': 'any'} \n",
+      "{'user': 'postgres', 'channel_binding': 'prefer', 'dbname': 'postgres', 'host': 'localhost', 'port': '5432', 'options': '', 'sslmode': 'prefer', 'sslcompression': '0', 'sslsni': '1', 'ssl_min_protocol_version': 'TLSv1.2', 'gssencmode': 'disable', 'krbsrvname': 'postgres', 'target_session_attrs': 'any'} \n",
       "\n",
-      "You are connected to -  ('PostgreSQL 15.3 on x86_64-pc-linux-gnu, compiled by gcc (Debian 10.2.1-6) 10.2.1 20210110, 64-bit',) \n",
+      "You are connected to -  ('PostgreSQL 16.3, compiled by Visual C++ build 1938, 64-bit',) \n",
       "\n",
       "PostgreSQL connection is closed\n"
      ]
@@ -162,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -206,12 +184,12 @@
     "                                  port=os.getenv('POSTGRES_PORT'),\n",
     "                                  database=os.getenv('POSTGRES_DATABASE'))\n",
     "\n",
-    "execute_values(connection,df_raw_data_clean,'raw_txns')"
+    "execute_values(connection,df_raw_data_clean,'etl.raw_txns')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,8 +197,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Move files to archive"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source_dir = 'Data'\n",
+    "target_dir = 'Data/Old'\n",
+    "    \n",
+    "file_names = os.listdir(source_dir)\n",
+    "    \n",
+    "for file_name in file_names:\n",
+    "    shutil.move(os.path.join(source_dir, file_name), target_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
