add proc call to ETL

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,11 +70,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_raw_data_clean = df_raw_data.replace(np.nan, '', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anonymise data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw_data_clean[\"AccountNumber\"] = '************'+df_raw_data_clean[\"AccountNumber\"].str[-4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw_data_clean[\"SourceFile\"] = df_raw_data_clean[\"SourceFile\"].str[-26:]"
    ]
   },
   {
@@ -88,12 +113,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Connect to DB"
+    "Test Connect to DB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -139,8 +164,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Funciton for insert into raw"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +197,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insert into Raw"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -188,12 +227,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function for calling ETL proc"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection.commit()"
+    "\n",
+    "def execute_proc(conn, procname): \n",
+    "    call = 'call '+procname\n",
+    "    try: \n",
+    "        cursor = conn.cursor()\n",
+    "  \n",
+    "        # call stored procedure \n",
+    "        cursor.execute(call)\n",
+    "        connection.commit()\n",
+    "        cursor.close()  \n",
+    "        connection.close()  \n",
+    "        print('Executed ',procname,' Successfully')\n",
+    "        \n",
+    "    except (Exception, psycopg2.DatabaseError) as error: \n",
+    "        print(\"Error while connecting to PostgreSQL\", error) \n",
+    "  \n",
+    "    finally: \n",
+    "        \n",
+    "        # closing database connection. \n",
+    "        if conn: \n",
+    "            cursor.close()  \n",
+    "            connection.close()\n",
+    "            print(\"PostgreSQL connection is closed\") \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "exec proc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executed  etl.RawToStd()  Successfully\n",
+      "PostgreSQL connection is closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "connection = psycopg2.connect(user=os.getenv('POSTGRES_USER'),\n",
+    "                                  password=os.getenv('POSTGRES_PASSWORD'),\n",
+    "                                  host=os.getenv('POSTGRES_HOST'),\n",
+    "                                  port=os.getenv('POSTGRES_PORT'),\n",
+    "                                  database=os.getenv('POSTGRES_DATABASE'))\n",
+    "\n",
+    "execute_proc(connection,'etl.RawToStd()')\n",
+    "\n"
    ]
   },
   {
@@ -205,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +335,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cursor.execute('call etl.RawToStd()')\n",
+    "# cursor.close()  \n",
+    "# connection.close()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,12 +357,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cursor.execut   e(\"EXEC etl.RawToStd\")\n",
     "# cnxn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# procname = 'etl.RawToStd()'\n",
+    "# call = 'call '+procname\n",
+    "# cursor = connection.cursor()\n",
+    "# cursor.execute(call)\n",
+    "# connection.commit()\n",
+    "# cursor.close()  \n",
+    "# connection.close()  "
    ]
   }
  ],
