--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,8 +320,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert to py script"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook ETL.ipynb to script\n",
+      "[NbConvertApp] Writing 5519 bytes to ETL.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to script ETL.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
