read sql into df

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -118,16 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PostgreSQL server information\n",
-      "{'user': 'postgres', 'channel_binding': 'prefer', 'dbname': 'postgres', 'host': 'localhost', 'port': '5432', 'options': '', 'sslmode': 'prefer', 'sslcompression': '0', 'sslsni': '1', 'ssl_min_protocol_version': 'TLSv1.2', 'gssencmode': 'disable', 'krbsrvname': 'postgres', 'target_session_attrs': 'any'} \n",
-      "\n",
       "You are connected to -  ('PostgreSQL 16.3, compiled by Visual C++ build 1938, 64-bit',) \n",
       "\n",
       "PostgreSQL connection is closed\n"
@@ -145,14 +142,14 @@
     "\n",
     "    # Create a cursor to perform database operations\n",
     "    cursor = connection.cursor()\n",
-    "    # Print PostgreSQL details\n",
-    "    print(\"PostgreSQL server information\")\n",
-    "    print(connection.get_dsn_parameters(), \"\\n\")\n",
+    "    # # Print PostgreSQL details\n",
+    "    # print(\"PostgreSQL server information\")\n",
+    "    # print(connection.get_dsn_parameters(), \"\\n\")\n",
     "    # Executing a SQL query\n",
     "    cursor.execute(\"SELECT version();\")\n",
     "    # Fetch result\n",
     "    record = cursor.fetchone()\n",
-    "    print(\"You are connected to - \", record, \"\\n\")\n",
+    "    print(\"Testing connection to - \", record, \"\\n\")\n",
     "\n",
     "except (Exception, Error) as error:\n",
     "    print(\"Error while connecting to PostgreSQL\", error)\n",
