--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -193,14 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function for calling ETL proc"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "exec proc"
+    "Call ETL proc"
    ]
   },
   {
@@ -229,20 +222,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in logging"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Move files to archive\n",
-    "# # NOTE: Not used for dev\n",
-    "# source_dir = 'Data'\n",
-    "# target_dir = 'Data/Old'\n",
-    "    \n",
-    "# file_names = os.listdir(source_dir)\n",
-    "    \n",
-    "# for file_name in file_names:\n",
-    "#     shutil.move(os.path.join(source_dir, file_name), target_dir)"
+    "query = 'select recordcount,AffectedTable,calledproc from  etl.log l inner join (select max(id) as max_id from etl.log) m on l.id = m.max_id'\n",
+    "column_names = ['recordcount','AffectedTable','calledproc']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection = psycopg2.connect(user=os.getenv('POSTGRES_USER'),\n",
+    "                                  password=os.getenv('POSTGRES_PASSWORD'),\n",
+    "                                  host=os.getenv('POSTGRES_HOST'),\n",
+    "                                  port=os.getenv('POSTGRES_PORT'),\n",
+    "                                  database=os.getenv('POSTGRES_DATABASE'))\n",
+    "\n",
+    "\n",
+    "log = postgresql_to_dataframe(connection, query, column_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    0 rows inserted into etl.std_txns\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(log.recordcount.map(str)+' rows inserted into '+log.AffectedTable.map(str))"
    ]
   },
   {
@@ -254,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +289,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook ETL.ipynb to script\n",
-      "[NbConvertApp] Writing 5651 bytes to ETL.py\n"
+      "[NbConvertApp] Writing 4576 bytes to ETL.py\n"
      ]
     }
    ],
@@ -329,6 +356,23 @@
     "# connection.commit()\n",
     "# cursor.close()  \n",
     "# connection.close()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Move files to archive\n",
+    "# # NOTE: Not used for dev\n",
+    "# source_dir = 'Data'\n",
+    "# target_dir = 'Data/Old'\n",
+    "    \n",
+    "# file_names = os.listdir(source_dir)\n",
+    "    \n",
+    "# for file_name in file_names:\n",
+    "#     shutil.move(os.path.join(source_dir, file_name), target_dir)"
    ]
   }
  ],
