--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -256,20 +256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    0 rows inserted into etl.std_txns\n",
+      "0    0 rows inserted into etl.std_txns by etl.RawToStd\n",
       "dtype: object\n"
      ]
     }
    ],
    "source": [
-    "print(log.recordcount.map(str)+' rows inserted into '+log.AffectedTable.map(str))"
+    "print(log.recordcount.map(str)+' rows inserted into '+log.AffectedTable.map(str)+' by '+log.calledproc.map(str))"
    ]
   },
   {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -289,90 +289,12 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook ETL.ipynb to script\n",
-      "[NbConvertApp] Writing 4576 bytes to ETL.py\n"
+      "[NbConvertApp] Writing 3339 bytes to ETL.py\n"
      ]
     }
    ],
    "source": [
     "!jupyter nbconvert --to script ETL.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# server = os.getenv('SQL_SERVER')\n",
-    "# database = os.getenv('SQL_DATABASE')\n",
-    "# cnxn_str = 'DRIVER={SQL Server};server='+server+';Database='+database+';Trusted_Connection=yes;'\n",
-    "# cnxn = pyodbc.connect(cnxn_str)\n",
-    "# cursor = cnxn.cursor()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cursor.execute('call etl.RawToStd()')\n",
-    "# cursor.close()  \n",
-    "# connection.close()  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for index, row in df_raw_data_clean.iterrows():\n",
-    "#     cursor.execute(\"Insert into raw_txns (BSBNumber,AccountNumber,TransactionDate,Narration,Cheque,Debit,Credit,Balance,TransactionType,SourceFile) Values (?,?,?,?,?,?,?,?,?,?)\", row.BSBNumber,row.AccountNumber,row.TransactionDate,row.Narration,row.Cheque,row.Debit,row.Credit,row.Balance,row.TransactionType,row.SourceFile)\n",
-    "# cnxn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cursor.execut   e(\"EXEC etl.RawToStd\")\n",
-    "# cnxn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# procname = 'etl.RawToStd()'\n",
-    "# call = 'call '+procname\n",
-    "# cursor = connection.cursor()\n",
-    "# cursor.execute(call)\n",
-    "# connection.commit()\n",
-    "# cursor.close()  \n",
-    "# connection.close()  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Move files to archive\n",
-    "# # NOTE: Not used for dev\n",
-    "# source_dir = 'Data'\n",
-    "# target_dir = 'Data/Old'\n",
-    "    \n",
-    "# file_names = os.listdir(source_dir)\n",
-    "    \n",
-    "# for file_name in file_names:\n",
-    "#     shutil.move(os.path.join(source_dir, file_name), target_dir)"
    ]
   }
  ],
