--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +130,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing connection to -  ('PostgreSQL 16.3, compiled by Visual C++ build 1938, 64-bit',) \n",
-      "\n",
-      "PostgreSQL connection is closed\n"
+      "Connection Test Passed <connection object at 0x0000025D7CE37890; dsn: 'user=postgres password=xxx dbname=postgres host=localhost port=5432', closed: 0> \n",
+      "\n"
      ]
     }
    ],
@@ -168,17 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the dataframe is inserted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "connection = psycopg2.connect(user=os.getenv('POSTGRES_USER'),\n",
     "                                  password=os.getenv('POSTGRES_PASSWORD'),\n",
@@ -198,18 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executed  etl.RawToStd()  Successfully\n",
-      "PostgreSQL connection is closed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "connection = psycopg2.connect(user=os.getenv('POSTGRES_USER'),\n",
     "                                  password=os.getenv('POSTGRES_PASSWORD'),\n",
@@ -230,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    0 rows inserted into etl.std_txns by etl.RawToStd\n",
+      "0    89 rows inserted into etl.std_txns by etl.RawT...\n",
       "dtype: object\n"
      ]
     }
@@ -281,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +271,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook ETL.ipynb to script\n",
-      "[NbConvertApp] Writing 3339 bytes to ETL.py\n"
+      "[NbConvertApp] Writing 3333 bytes to ETL.py\n"
      ]
     }
    ],
