handle multipl sources of txns

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,9 @@
     "import psycopg2.extras as extras\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "from tkinter import filedialog\n"
+    "from tkinter import filedialog\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,19 +44,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "df_raw_data = pd.DataFrame()\n",
-    "\n",
+    "df_raw_data_BW = pd.DataFrame()\n",
+    "df_raw_data_CBA = pd.DataFrame()\n",
     "\n",
     "for csv in files:\n",
-    "    frame = pd.read_csv(csv)\n",
-    "    frame['SourceFile'] = os.path.basename(csv)\n",
-    "    df_raw_data = pd.concat([df_raw_data,frame])\n",
-    "    \n"
+    "    if '5229' in os.path.basename(csv):\n",
+    "        frame = pd.read_csv(csv)\n",
+    "        frame['SourceFile'] = os.path.basename(csv)\n",
+    "        df_raw_data_BW = pd.concat([df_raw_data_BW,frame])\n",
+    "        df_raw_data_BW['Source'] = 'BankWest'\n",
+    "    else:\n",
+    "        frame = pd.read_csv(csv,header=None)\n",
+    "        frame['SourceFile'] = os.path.basename(csv)\n",
+    "        df_raw_data_CBA = pd.concat([df_raw_data_CBA,frame])\n",
+    "        df_raw_data_CBA['Source'] = 'CBA'    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clean datasets to same format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No CBA data found\n"
+     ]
+    }
+   ],
+   "source": [
+    "if df_raw_data_CBA.empty:\n",
+    "    print(\"No CBA data - skipping import\")\n",
+    "elif df_raw_data_BW.empty:\n",
+    "        print(\"No BankWest data found\")\n",
+    "else:\n",
+    "    df_raw_data_CBA.rename(columns={0: \"Transaction Date\", 1: \"Amount\",2:\"Narration\",3:\"Balance\"}, inplace=True)\n",
+    "\n",
+    "    df_raw_data_CBA_CR = df_raw_data_CBA[df_raw_data_CBA['Amount'] >= 0]\n",
+    "    df_raw_data_CBA_CR.rename(columns={\"Amount\": \"Credit\"}, inplace=True)\n",
+    "\n",
+    "    df_raw_data_CBA_DR = df_raw_data_CBA[df_raw_data_CBA['Amount'] < 0]\n",
+    "    df_raw_data_CBA_DR.rename(columns={\"Amount\": \"Debit\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Append dataframes   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw_data = pd.concat([df_raw_data_BW, df_raw_data_CBA_CR,df_raw_data_CBA_DR], axis=0, ignore_index=True) "
    ]
   },
   {
@@ -66,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +329,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook ETL.ipynb to script\n",
-      "[NbConvertApp] Writing 3333 bytes to ETL.py\n"
+      "[NbConvertApp] Writing 4438 bytes to ETL.py\n"
      ]
     }
    ],
